# EncMind

./: .gitignore  Cargo.toml  INSTALL.md  README.md  install.sh
.github/workflows/: rust.yml
crates/agent/: Cargo.toml
crates/agent/src/: approval.rs  context.rs  firewall.rs  lib.rs  lockdown.rs  loop_detector.rs  message_validation.rs  pool.rs  registry.rs  risk_classifier.rs  runtime.rs  scheduler.rs  subagent.rs  tool_progress.rs  tool_registry.rs  workspace_trust.rs
crates/browser/: Cargo.toml
crates/browser/src/: guardrails.rs  lib.rs  plugin.rs  pool.rs  tools.rs
crates/channels/: Cargo.toml
crates/channels/src/: cron_dispatcher.rs  gmail.rs  heartbeat.rs  lib.rs  router.rs  slack.rs  telegram.rs  transform.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  serve.rs  setup.rs  status.rs
crates/core/: Cargo.toml
crates/core/src/: bash_allowlist.rs  channel_credentials.rs  circuit_breaker.rs  config.rs  error.rs  hooks.rs  lib.rs  permission.rs  plugin.rs  policy.rs  scheduler.rs  skill_id.rs  traits.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: challenge.rs  device_id.rs  keypair.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: approval.rs  budget.rs  channel_manager.rs  device_auth.rs  dispatch.rs  error_classifier.rs  idempotency.rs  lib.rs  local_tool_handler.rs  local_tool_policy.rs  mdns.rs  node.rs  node_command_handler.rs  node_ws.rs  pairing.rs  plugin_api.rs  plugin_manager.rs  pricing.rs  protocol.rs  query_guard.rs  rate_limiter.rs  routes.rs  runtime_config.rs  server.rs  skill_timer.rs  state.rs  test_utils.rs  tls.rs  tls_listener.rs  wasm_channel_transform.rs  ws.rs
crates/gateway/src/handlers/: agents.rs  api_usage.rs  auth.rs  backup.rs  channels.rs  chat.rs  config_handler.rs  cron.rs  keys.rs  memory.rs  mod.rs  models.rs  nodes.rs  pairing_handler.rs  plugins.rs  readiness.rs  security.rs  sessions.rs  skills.rs  timeline.rs  timers.rs
crates/gateway/src/plugins/: mod.rs  netprobe.rs  url_extract.rs
crates/gateway/src/plugins/digest/: README.md  mod.rs  tests.rs
crates/gateway/src/plugins/netprobe/: README.md  mod.rs
crates/gateway/src/plugins/shared/: mod.rs  url_extract.rs
crates/gateway/tests/: integration.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  dispatcher.rs  health.rs  lib.rs  openai.rs  retry.rs  sse.rs
crates/local-client/: Cargo.toml
crates/local-client/src/: chat.rs  commands.rs  connect.rs  discover.rs  keystore.rs  known_hosts.rs  main.rs  memory_cmd.rs  pair.rs  protocol.rs  sessions_cmd.rs  setup.rs  tls.rs  url_utils.rs
crates/memory/: Cargo.toml
crates/memory/src/: embedding_mode.rs  hybrid_search.rs  lib.rs  memory_store.rs  quality_gate.rs
crates/memory/src/embedder/: api.rs  local.rs  mock.rs  mod.rs  resilient.rs
crates/memory/src/vector_store/: in_memory.rs  mod.rs  qdrant.rs  sqlite.rs
crates/skill-cli/: Cargo.toml
crates/skill-cli/src/: build.rs  main.rs  manifest_utils.rs  scaffold.rs  test_runner.rs  validate.rs
crates/skill-sdk/: Cargo.toml
crates/skill-sdk/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: api_key_store.rs  api_usage.rs  audit.rs  backup.rs  channel_account_store.rs  cron_store.rs  device_store.rs  encryption.rs  key_derivation.rs  lib.rs  memory_metadata.rs  migrations.rs  plugin_state.rs  pool.rs  session_store.rs  skill_timer_store.rs  skill_toggle_store.rs  timeline_store.rs  workflow_store.rs
crates/tee/: Cargo.toml
crates/tee/src/: lib.rs
crates/wasm-host/: Cargo.toml
crates/wasm-host/src/: abi.rs  hook_bridge.rs  invoker.rs  lib.rs  limiter.rs  manifest.rs  runtime.rs  secret_scanner.rs  skill_loader.rs
crates/wasm-host/src/host_functions/: approval.rs  capability.rs  config.rs  context.rs  hooks.rs  kv.rs  log.rs  mod.rs  net.rs
docs/design/: deferred-items.md  skills-phase1.md  v2-architecture-roadmap.md
examples/skills/calc/: calc.toml  calc.wasm  package-lock.json  package.json  tsconfig.json
examples/skills/calc/src/: index.ts  javy.d.ts
examples/skills/echo-rust/: Cargo.toml  manifest.toml
examples/skills/echo-rust/src/: lib.rs
examples/skills/echo-ts/: echo-ts.toml  echo-ts.wasm  package-lock.json  package.json
examples/skills/echo-ts/src/: index.ts
examples/skills/plugin-smoke-javy/: package-lock.json  package.json  plugin-smoke-javy.toml  plugin-smoke-javy.wasm  tsconfig.json
examples/skills/plugin-smoke-javy/src/: index.ts  javy.d.ts
examples/skills/plugin-smoke-native/: Cargo.toml  manifest.toml  plugin-smoke-native.wasm
examples/skills/plugin-smoke-native/src/: lib.rs
examples/skills/web-watch/: Cargo.toml  manifest.toml  web_watch.wasm
examples/skills/web-watch/src/: lib.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: index.ts  javy.d.ts  runtime.ts  types.ts
sdk/typescript/tests/: exports-map.test.js  runtime.test.js  runtime.with-dist.test.js
