[workspace]
resolver = "2"
members = ["crates/core", "crates/tee", "crates/storage", "crates/llm", "crates/wasm-host", "crates/agent", "crates/cli", "crates/crypto", "crates/gateway", "crates/local-client", "crates/memory", "crates/channels", "crates/browser", "crates/skill-cli", "crates/skill-sdk"]
exclude = ["examples/skills/echo-rust", "examples/skills/echo-ts", "examples/skills/plugin-smoke-native", "examples/skills/plugin-smoke-javy", "examples/skills/web-watch", "examples/skills/calc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "1.0"
jsonschema = "0.30"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Types
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.2", features = ["serde", "uuid"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
pin-project-lite = "0.2"

# Crypto (pinned for security)
aes-gcm = "=0.10.3"
argon2 = "=0.5.3"
sha2 = "=0.10.9"
rand = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }

# Storage
rusqlite = { version = "0.38", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
url = "2.5"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
libc = "0.2"

# Discovery
mdns-sd = "0.11"

# WebSocket client
tokio-tungstenite = "0.24"

# TLS
rcgen = "0.13"
arc-swap = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Browser
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
base64 = "0.22"

# RAG
qdrant-client = { version = "1", default-features = false, features = ["serde"] }

# WASM
wasmtime = "41"
wasmtime-wasi = "41"

# Pattern matching
regex = "1"

# Testing
tempfile = "3"
