[package]
name = "encmind-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime: conversation loop, tool dispatch, context management, and connection pooling for EncMind"

[dependencies]
encmind-core = { path = "../core" }
encmind-storage = { path = "../storage" }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
encmind-storage = { path = "../storage", features = ["test-helpers"] }
