[package]
name = "encmind-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless browser pool for EncMind agent tools"

[dependencies]
encmind-core = { path = "../core" }
encmind-agent = { path = "../agent" }
chromiumoxide = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
