[package]
name = "encmind-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Channel adapters (Telegram, etc.), router, heartbeat, and cron dispatcher for EncMind"

[dependencies]
encmind-core = { path = "../core" }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
