[package]
name = "encmind-skill-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Developer CLI for building and testing EncMind WASM skills"

[[bin]]
name = "encmind-skill"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
encmind-core = { path = "../core" }
encmind-wasm-host = { path = "../wasm-host" }
encmind-storage = { path = "../storage" }
wasmtime = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
